SERVER-68899 Check FCV is initialized before checking that featureFlagRequireTenantId is enabled